# kvm-over-ip

./: .gitignore  README.md  build_bridge.bat  build_test.bat  build_with_sdk.ps1  cargo_build_full.ps1  check_sdk.ps1  check_xwin_sdk.ps1  get_winsdk.ps1  get_xwin.ps1  get_xwin2.ps1  install_mingw.ps1  install_sdk.ps1  install_xwin.ps1  run_cargo_test.ps1  run_xwin.ps1  setup_mingw.ps1  test_lld.ps1
.claude/: settings.local.json
.claude/agents/: agent-outcome-auditor.md  code-implementer.md  code-reviewer.md  integration-test-gatekeeper.md  release-manager.md  requirements-architect.md
.claude/skills/develop/: SKILL.md
.github/: dependabot.yml
.github/workflows/: build-macos.yml  ci.yml  release.yml
docs/: BUILD_SCRIPTS.md  PACKAGING.md
docs/design/: component-design.md  system-architecture.md
docs/planning/: development-plan.md  epics-and-user-stories.md  project-constitution.md
docs/requirements/: requirements-specification.md
docs/specifications/: network-protocol-specification.md  technical-specification.md
skills/: constitution.md
src/: Cargo.toml
src/crates/kvm-client/: Cargo.toml
src/crates/kvm-client/debian/: kvm-client.desktop  kvm-client.service  postinst  prerm
src/crates/kvm-client/src/: lib.rs  main.rs
src/crates/kvm-client/src/application/: emulate_input.rs  mod.rs  report_screens.rs
src/crates/kvm-client/src/infrastructure/: mod.rs
src/crates/kvm-client/src/infrastructure/input_emulation/: linux.rs  macos.rs  mock.rs  mod.rs  windows.rs
src/crates/kvm-client/src/infrastructure/network/: mod.rs
src/crates/kvm-client/src/infrastructure/screen_info/: linux.rs  macos.rs  mod.rs  windows.rs
src/crates/kvm-client/src/infrastructure/ui_bridge/: mod.rs
src/crates/kvm-client/wix/: License.rtf  main.wxs
src/crates/kvm-core/: Cargo.toml
src/crates/kvm-core/benches/: codec_bench.rs  keymap_bench.rs  layout_bench.rs
src/crates/kvm-core/src/: lib.rs
src/crates/kvm-core/src/domain/: layout.rs  mod.rs
src/crates/kvm-core/src/keymap/: hid.rs  linux_x11.rs  macos_cg.rs  mod.rs  windows_vk.rs
src/crates/kvm-core/src/protocol/: codec.rs  messages.rs  mod.rs  sequence.rs
src/crates/kvm-core/tests/: protocol_roundtrip.rs
src/crates/kvm-master/: Cargo.toml
src/crates/kvm-master/src/: lib.rs  main.rs
src/crates/kvm-master/src/application/: manage_clients.rs  mod.rs  route_input.rs  update_layout.rs
src/crates/kvm-master/src/infrastructure/: mod.rs
src/crates/kvm-master/src/infrastructure/input_capture/: mock.rs  mod.rs  windows.rs
src/crates/kvm-master/src/infrastructure/network/: connection_manager.rs  discovery.rs  mod.rs
src/crates/kvm-master/src/infrastructure/storage/: config.rs  mod.rs
src/crates/kvm-master/src/infrastructure/ui_bridge/: mod.rs
src/crates/kvm-master/tests/: connection_integration.rs  routing_integration.rs
src/crates/kvm-master/wix/: License.rtf  main.wxs
src/crates/kvm-web-bridge/: Cargo.toml
src/crates/kvm-web-bridge/debian/: kvm-web-bridge.service  postinst  prerm
src/crates/kvm-web-bridge/src/: lib.rs  main.rs
src/crates/kvm-web-bridge/src/application/: bridge_service.rs  mod.rs
src/crates/kvm-web-bridge/src/domain/: config.rs  messages.rs  mod.rs
src/crates/kvm-web-bridge/src/infrastructure/: master_conn.rs  mod.rs  ws_server.rs
