[workspace]
resolver = "2"
members = [
    "crates/kvm-core",
    "crates/kvm-master",
    "crates/kvm-client",
    "crates/kvm-web-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["KVM-Over-IP Contributors"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1"
# Error handling
thiserror = "1"
anyhow = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Unique identifiers
uuid = { version = "1", features = ["v4", "serde"] }
# Configuration
toml = "0.8"
# WebSocket support (used by kvm-web-bridge)
tokio-tungstenite = { version = "0.24", features = ["connect"] }
# JSON serialization (used by kvm-web-bridge for the browser-facing protocol)
serde_json = "1"
# Testing
mockall = "0.13"
tokio-test = "0.4"
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
