[package]
name = "kvm-master"
description = "KVM-Over-IP master application (Windows)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "kvm_master"
path = "src/lib.rs"

[[bin]]
name = "kvm-master"
path = "src/main.rs"

[dependencies]
kvm-core = { path = "../kvm-core" }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }

# Async trait support
async-trait = "0.1"

# Tauri (optional - used when building with UI)
# tauri = { version = "2", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
# Windows API bindings for low-level hooks
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
] }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }
tokio = { workspace = true }
