[package]
name = "kvm-web-bridge"
description = "WebSocket-to-native-protocol bridge for KVM-Over-IP web client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "kvm-web-bridge"
path = "src/main.rs"

[dependencies]
kvm-core = { path = "../kvm-core" }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
